--- a/style.css
+++ b/style.css
@@ -11,5 +11,5 @@ h2{
     background-color: aquamarine;
     border: 5px solid white;
     border-radius: 10px;
-    
+    font-family: sans-serif;
 }
