--- a/style.css
+++ b/style.css
@@ -1,27 +1,37 @@
 html{
     background-color: lightyellow;
+    background-image: url(./rps-pics/wp5284603.png);
 }
 body{
     margin:0;
     display: flex;
     flex-flow: column wrap;
     font-family: 'Mouse Memoirs', sans-serif;
-    background-image: url(./rps-pics/wp5284603.png);
+    justify-content: stretch;
 }
 .main{
     display: flex;
     gap: 8px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .sub {
     display: flex;
     gap: 16px;
     justify-content: center;
-    flex-wrap: wrap;
-    font-weight:700;
-    font-size: 18px;
     
+    font-weight:700;
+    font-size: 25px;
+    
+}
+.sub1child {
+    display: flex;
+    flex-direction: column;
+}
+.children{
+    display: flex;
+    gap:20px;
 }
 
 .child {
@@ -42,20 +52,21 @@ body{
     justify-content: space-evenly;
 }
 .scores {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     border: 4px solid black;
     border-radius: 10px;
     background-color: yellow;
 }
 .choice {
-    height: 400px;
+    height: 264px;
     width: 200px;
     border: 2px dotted whitesmoke;
     border-radius: 10px;
 }
 h2,h3,h4 {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 button{
@@ -63,11 +74,11 @@ button{
     border: 2px solid black;
     background-color: yellow;
     color: black;
-    height: 50px;
-    width:82px;
+    height: 60px;
+    width:92px;
     border-radius: 10px;
     font-family: 'Mouse Memoirs', sans-serif;
-    font-size: 16px;
+    font-size: 30px;
 }
 .output{
     margin: 10px;
@@ -88,4 +99,11 @@ header,footer{
     
 }
     
- 
+#text{
+    font-size: larger;
+    text-align: center;
+}
+.scores-js{
+    text-align: center;
+    font-size: 60px;
+}
